Fix TalkBack fallback keyboard shortcut

- Update window properties and detach ax child tree when user switches
  back to TalkBack.

  ]. Confirm that TalkBack works well.

Bug: 881695
Test: Open any android app with spoken feedback and press Search+A then
Change-Id: I2b5db2d77e49e674e98c1b3cfbb18b2567d69388
Reviewed-on: https://chromium-review.googlesource.com/1212210
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Commit-Queue: Yuki Awano <yawano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590136}
Former-commit-id: aa303f2d8a4733e02ebd5fcb4ccc916a101f8156