chrome/browser/chromeos/arc/accessibility/arc_accessibility_helper_bridge.h
@@ -19,6 +19,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/arc/connection_observer.h"
 #include "components/keyed_service/core/keyed_service.h"
 #include "ui/accessibility/ax_host_delegate.h"
+#include "ui/aura/window_tracker.h"
 #include "ui/wm/public/activation_change_observer.h"
 
 class Profile;
@@ -57,7 +58,10 @@ class ArcAccessibilityHelperBridge
   void SetNativeChromeVoxArcSupport(bool enabled);
 
   // Receives the result of setting native ChromeVox Arc support.
-  void OnSetNativeChromeVoxArcSupportProcessed(bool enabled, bool processed);
+  void OnSetNativeChromeVoxArcSupportProcessed(
+      std::unique_ptr<aura::WindowTracker> window_tracker,
+      bool enabled,
+      bool processed);
 
   // KeyedService overrides.
   void Shutdown() override;
